# skychat-lib

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SkychatLib.podspec  package.json  skychat-lib.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/skychatlib/: SkychatLibModule.kt  SkychatLibPackage.kt
cpp/: skychat-lib.cpp  skychat-lib.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/skychatlib/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/SkychatLibExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SkychatLibExample.xcodeproj/: project.pbxproj
example/ios/SkychatLibExample.xcodeproj/xcshareddata/xcschemes/: SkychatLibExample.xcscheme
example/ios/SkychatLibExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: SkychatLib.h  SkychatLib.mm
rust_modules/uniffi-starter/rust/foobar/: Cargo.toml
rust_modules/uniffi-starter/rust/foobar/src/: lib.rs  wrappers.rs
scripts/: gen-bin.sh  gen-both.sh  gen-glue.sh  run-android.sh
src/: NativeSkychatLib.ts  client.tsx  index.tsx
